@@ -1,3 +1,10 @@
+2002-09-23  Bastien Nocera  <hadess@hadess.net>
+
+	* autogen.sh: exit if aclocal, autoheader, automake or autoconf
+	fails to run without warnings. Usually compilation would fail
+	afterwards with funky errors.
+	This is more anal than the version committed to the gnome-2-0 branch
+
 2002-08-18  Havoc Pennington  <hp@pobox.com>
 
 	* autogen.sh: hardcode aclocal-1.4/automake-1.4 so that users with
